# rs274-sai-compile-example

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.ngc  test.sh
